# m2ds_altegrad

./: .gitignore  pyproject.toml
Lab1_HAN/: ALTEGRAD_2022_Lab1_HAN.ipynb
Lab2_TransferLearning/: ALTEGRAD_2022_transfer_learning.ipynb
Lab3/: lab3_altegrad_2022.ipynb  plot.ipynb  pyproject.toml
Lab3/plot_data/: run-sentence_prediction_books_RoBERTa_small_fr_huggingface_ms8_lr1e-05_me5_0_runs_Nov21_21-35-17_AROZYM-tag-eval_accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_huggingface_ms8_lr1e-05_me5_1_runs_Nov21_21-35-56_AROZYM-tag-eval_accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_huggingface_ms8_lr1e-05_me5_2_runs_Nov21_21-36-41_AROZYM-tag-eval_accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_ms8_mu1125_lr1e-05_me5_0_test-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_ms8_mu1125_lr1e-05_me5_0_valid-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_ms8_mu1125_lr1e-05_me5_1_test-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_ms8_mu1125_lr1e-05_me5_1_valid-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_ms8_mu1125_lr1e-05_me5_2_test-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_ms8_mu1125_lr1e-05_me5_2_valid-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_random_ms8_mu1125_lr1e-05_me5_0_test-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_random_ms8_mu1125_lr1e-05_me5_1_test-tag-accuracy.csv  run-sentence_prediction_books_RoBERTa_small_fr_random_ms8_mu1125_lr1e-05_me5_2_test-tag-accuracy.csv
(+27 files in other folders)
