[tool.poetry]
name = "m2ds-altegrad"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "m2ds_altegrad"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
scikit-learn = "^1.1.2"
python-igraph = "^0.10.2"
networkx = "^2.8.7"
torch = [
 {url="https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl", platform="win32"},
 {url="https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-linux_x86_64.whl", platform="linux"}
]
nltk = "^3.7"
gensim = "^4.2.0"
tensorflow = "^2.10.0"
fairseq = "^0.12.2"
transformers = "^4.23.1"
ipywidgets = ">=7.0,<8.0"
sentencepiece = "^0.1.97"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {extras = ["jupyter"], version = "^22.10.0"}
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
